# garmin-coach-mcp

./: .gitignore  README.md  pyproject.toml
src/garmin_coach_mcp/: __init__.py  auth.py  cli.py  models.py  server.py  sync.py
