[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin-coach-mcp"
version = "0.1.0"
description = "MCP server for Garmin Connect fitness coaching with local SQLite database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "garminconnect>=0.2.38",
    "fastmcp>=0.4.0",
    "sqlalchemy>=2.0",
]

[project.scripts]
garmin-coach-auth = "garmin_coach_mcp.cli:cmd_auth"
garmin-coach-sync = "garmin_coach_mcp.cli:cmd_sync"
garmin-coach-mcp = "garmin_coach_mcp.cli:cmd_server"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_coach_mcp"]
